UNRELEASED CHANGES:

* Add ability to archive a contact
* Add right-click support on contact list
* Set currency and timezone for new users
* Fix settings' sidebar links and change security icon
* Fix CSV import

RELEASED VERSIONS:

v2.9.0 - 2018-10-14
-------------------

* Allow to define a max file size for uploaded document in an ENV variable (default to 10240kb)
* Add description field for a contact
* Add ability to retrieve all conversations for one contact through the API
* Add all tasks not yet completed on the dashboard
* Fix gravatar not displayed on dashboard view

v2.8.1 - 2018-10-08
-------------------

* Add ability to set a reminder for a life event
* Stop reporting OAuth exceptions
* Replace karakus/laravel-cloudflare with monicahq/laravel-cloudflare to fix dependencies issues
* Fix use of 'json' mysql column type

v2.8.0 - 2018-09-28
-------------------

* Add ability to track life events
* Add ability to define the default email address used for support
* Add sentry:release command
* Add Envoy file template
* Add passport config file
* Add new variable APP_DISPLAY_NAME
* Rename env variable 2FA_ENABLED to MFA_ENABLED (2FA_ENABLED is still functional for compatibility reasons)
* Improve search
* Fix reminders displaying wrong date
* Fix select boxes not working properly anymore
* Fix confirm email sent when signup_double_optin is false
* Fix now() without timezone functions
* Remove notion of events
* Support papertrail logging

v2.7.1 - 2018-09-05
-------------------

* Fix duplication of modules in the Settings page

v2.7.0 - 2018-09-04
-------------------

* Add ability to log conversations made on social networks or SMS
* Add language selector on register page
* Support Arabic language
* Improve automatic route binding
* Split app css in two files for better support of ltr/rtl text direction
* Add helper function htmldir()
* Fix gifts not showing when value was not set
* Fix phpunit not parsing all test files