@@ -3,6 +3,8 @@
 namespace App\Traits;
 
 use Sabre\VObject\Reader;
+use App\Helpers\VCardHelper;
+use App\Helpers\LocaleHelper;
 use App\Models\Contact\Gender;
 use App\Models\Contact\Address;
 use App\Models\Contact\Contact;
@@ -126,11 +128,16 @@ trait VCardImporter
         }
 
         if (! is_null($this->formatValue($vcard->TEL))) {
+            $tel = (string) $vcard->TEL;
+
+            $countryISO = VCardHelper::getCountryISOFromSabreVCard($vcard);
+            $tel = LocaleHelper::formatTelephoneNumberByISO($tel, $countryISO);
+
             // Saves the phone number
             $contactField = new ContactField;
             $contactField->contact_id = $contact->id;
             $contactField->account_id = $contact->account_id;
-            $contactField->data = $this->formatValue($vcard->TEL);
+            $contactField->data = $this->formatValue($tel);
             $contactField->contact_field_type_id = $this->contactFieldPhoneId();
             $contactField->save();
         }
