@@ -196,4 +196,19 @@ class VCardHelperTest extends FeatureTestCase
             $vCard->getProperties()
         );
     }
+
+    public function test_it_get_country_by_sabre_vcard()
+    {
+        $vcard = new \Sabre\VObject\Component\VCard([
+            'TEL' => '202-555-0191',
+            'ADR' => ['', '', '17 Shakespeare Ave.', 'Southampton', '', 'SO17 2HB', 'United Kingdom'],
+        ]);
+
+        $iso = VCardHelper::getCountryISOFromSabreVCard($vcard);
+
+        $this->assertEquals(
+            'GB',
+            $iso
+        );
+    }
 }
